# mutalyzer-api

./: .gitignore  Dockerfile  README.md  setup.cfg
.github/workflows/: build.yaml
mutalyzer_api/: api.py
mutalyzer_api/endpoints/: __init__.py  api.py  back_translate.py  common.py  compare.py  delins_model.py  description_extract.py  description_to_model.py  get_selectors.py  map.py  mutate.py  name_check.py  normalize.py  position_convert.py  reference_model.py  spdi_converter.py  view_variants.py
