[metadata]
name = mutalyzer_api
version = 0.2.0
description = Mutalyzer HGVS variant description normalizer.
long_description = file: README.md
long_description_content_type = text/markdown
author = Mihai Lefter
author_email = M.Lefter@lumc.nl
url = https://github.com/mutalyzer/api
keywords = Mutalyzer, HGVS
license = MIT
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
install_requires =
    mutalyzer==3.0.1
    flask-restx==0.5.1
    Flask-Cors==3.0.10
tests_require =
   pytest==6.2.2

[options.entry_points]
console_scripts =
    mutalyzer_api = mutalyzer_api.api:main

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 89
max-complexity = 18
select = B, C, E, F, W, T4, B9

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88

[testenv]
deps = pytest
commands = pytest

[tox:tox]
envlist = py35
